--- a/Common/packages.config
+++ b/Common/packages.config
@@ -2,4 +2,5 @@
 <packages>
   <package id="Microsoft.ServiceFabric" version="5.1.163" targetFramework="net461" />
   <package id="Microsoft.ServiceFabric.Data" version="2.1.163" targetFramework="net461" />
+  <package id="Microsoft.ServiceFabric.Services" version="2.1.163" targetFramework="net461" />
 </packages>
